test/sema/typeck/assign/reassign-let.out
error: `let` binding cannot be reassigned.
--> reassign-let.dora:1:19
 | fn f() { let a=1; a=2; }
                     ~~~
 | 
1 error found.
