test/sema/typeck/assign/reassign-let.dora
fn f() { let a=1; a=2; }
